--- a/Pages/project.html
+++ b/Pages/project.html
@@ -12,7 +12,18 @@
 	stroke: black;
 	stroke-width: 3;
 }
-
+div.tooltip {
+position: absolute;
+text-align: center;
+width: 150px;
+height: 25px;
+padding: 2px;
+font-size: 10px;
+background: #FFFFE0;
+border: 1px;
+border-radius: 8px;
+pointer-events: none;
+}
 </style>
 <svg width="960" height="600"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -23,7 +34,11 @@
 <button id="poverty2012" onclick='povertytwentyonetwo()'>Poverty Level 2012</button>
 <button id="poverty2009" onclick='povertytwentyzeronine()'>Poverty Level 2009</button>
 
-<script>	
+<script>
+var div = d3.select("body").append("div")
+.attr("class", "tooltip")
+.style("opacity", 0);
+	
 var svg = d3.select("svg"),
     width = +svg.attr("width"),
     height = +svg.attr("height");
@@ -76,6 +91,15 @@ d3.queue()
 	.defer(d3.csv, "threeperiods.csv", function(d) { povertylevel.set(d.id, +d.twentyfifteen); })
 	.await(ready);
 
+function ready(error, us, data) {
+var pairRateWithId = {};
+var pairNameWithId = {};
+ 
+data.forEach(function(d) {
+pairRateWithId[d.id] = +d.twentyfifteen;
+pairNameWithId[d.id] = d.name;
+});	
+	
 function ready(error, us) {
   if (error) throw error;
 	
@@ -92,6 +116,22 @@ function ready(error, us) {
       .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; }))
       .attr("class", "states")
       .attr("d", path)
+	.style("opacity", 0.8)
+.on("mouseover", function(d) {
+d3.select(this).transition().duration(300).style("opacity", 1);
+div.transition().duration(300)
+.style("opacity", 1)
+div.text(pairNameWithId[d.id] + " : " + pairRateWithId[d.id])
+.style("left", (d3.event.pageX) + "px")
+.style("top", (d3.event.pageY -30) + "px");
+})
+.on("mouseout", function() {
+d3.select(this)
+.transition().duration(300)
+.style("opacity", 0.8);
+div.transition().duration(300)
+.style("opacity", 0);
+})
 }
 function readytwentyonetwo(error, us) {
   if (error) throw error;
