--- a/Pages/project.html
+++ b/Pages/project.html
@@ -1,5 +1,86 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Geography 774 - tmcg736</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <style>
+    body {
+        padding-top: 70px;
+        /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    }
+    </style>
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+
+</head>
+
+<body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+			
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href= "../Pages/index.html">Lab 1</a>
+                    </li>
+                    <li>
+                        <a href="Lab2Finish.html">Lab 2</a>
+                    </li>
+                    <li>
+                        <a href="#">Lab 3</a>
+                    </li>
+					<li>
+						<a href="#">Lab 4</a>
+					</li>
+					<li>
+						<a href="#">Lab 5</a>
+					</li>
+					<li>
+						<a href="#">Project</a>
+					</li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <p class="lead">Project</p>
 <style>
 	
 	
@@ -12,7 +93,7 @@
 	stroke: black;
 	stroke-width: 3;
 }
-</style>
+</style>				
 <svg width="960" height="600"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
@@ -21,7 +102,6 @@
 <button id="poverty2015" onclick='povertytwentyfifteen()'>Poverty Level 2015</button>
 <button id="poverty2012" onclick='povertytwentyonetwo()'>Poverty Level 2012</button>
 <button id="poverty2009" onclick='povertytwentyzeronine()'>Poverty Level 2009</button>
-
 <script>
 
 var svg = d3.select("svg"),
@@ -132,14 +212,12 @@ function povertytwentyfifteen() {
 	.defer(d3.json, "https://d3js.org/us-10m.v1.json")
 	.defer(d3.csv, "threeperiods.csv", function(d) { povertylevel.set(d.id, +d.twentyfifteen); })
 	.await(ready);
-
 }
 function povertytwentyonetwo() {
 	d3.queue()
 	.defer(d3.json, "https://d3js.org/us-10m.v1.json")
 	.defer(d3.csv, "threeperiods.csv", function(d) { povertylevel.set(d.id, +d.twentyonetwo); })
 	.await(ready);
-
 }
 function povertytwentyzeronine() {
 	d3.queue()
@@ -147,4 +225,6 @@ function povertytwentyzeronine() {
 	.defer(d3.csv, "threeperiods.csv", function(d) { povertylevel.set(d.id, +d.twentyzeronine); })
 	.await(ready);
 }
-</script>
+</script>	
+
+</body>
