--- a/Pages/Lab4Finish.html
+++ b/Pages/Lab4Finish.html
@@ -89,10 +89,10 @@
 						<a href="#">Lab 4</a>
 					</li>
 					<li>
-						<a href="#">Lab 5</a>
+						<a href="Lab5Finish.html">Lab 5</a>
 					</li>
 					<li>
-						<a href="#">Project</a>
+						<a href="project.html">Project</a>
 					</li>
                 </ul>
             </div>
